Fixed Member List role color background Added margin spacing between each member in the member list

--- a/Discord/DarkVanilla.source.css
+++ b/Discord/DarkVanilla.source.css
@@ -59,7 +59,7 @@
 }
 
 .info-3pQQBb::after {
-	content: 'Dark Vanilla 2.9.1';
+	content: 'Dark Vanilla 2.9.2';
 	color: var(--theme-text-muted);
 	font-size: 12px;
 	font-weight: bold;
@@ -419,7 +419,8 @@ header[class*="header"] { backdrop-filter: blur(var(--blur)) !important; }
 
 /* Member List */
 /* Role Color Background */
-span[class*="roleColor"]::after {
+/*span[class*="roleColor"]::after {*/
+.username-i5-wv- span[style*="rgb("]::after {
 	content: '';
 	top: 0;
 	left: 0;
@@ -428,9 +429,10 @@ span[class*="roleColor"]::after {
 	position: absolute;
 	opacity: 0.125;
 	background: currentColor;
+	border: 0 solid transparent;
+	border-radius: var(--soft-corner);
 }
-div[class*="membersGroup"] + div[class*="member"] { margin-top: 5px; }
-div[class*="membersGroup"] + div[class*="member"] span[class*="roleColor"]::after { border-radius: 5px 5px 5px 5px; }
+.container-1oeRFJ { margin: 5px;}
 /* Subtext */
 .activityText-1rR-8O, .activityText-ev7Z1T { color: var(--theme-text); }
 .activityText-1rR-8O strong, .activityText-ev7Z1T strong { color: var(--theme-text-muted); }
